# llama-introspection

./: .env.template  .gitignore  CLAUDE.md  README.md  activation_geometry_ablation.py  batch_compute.py  battery.py  commands.md  compare_walks.py  config.py  generate_prompts.py  introspection.py  introspection_main.py  main.py  pyproject.toml  run_experiment.py  steering_vectors.py  util.py
assets/: 1B.csv  405B.csv  70B.csv  8B.csv
experiments/: __init__.py  battery.py  compare_walks.py  generate_prompts.py  intervention_geometry.py  introspection.py  plot_vector_norms.py  test_intervention_propagation.py
src/llama_introspection/: __init__.py  evaluation.py  geometry.py  models.py  steering.py  trajectory.py  utils.py
tests/: conftest.py  mocks.py  test_evaluation.py  test_experiment_e2e.py  test_geometry.py  test_models.py  test_package.py  test_steering.py  test_trajectory.py  test_utils.py
