[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-introspection"
version = "0.1.0"
description = "Reproducing and extending Anthropic's introspection experiments on LLaMA models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "nnsight",
    "anthropic",
    "python-dotenv",
    "pandas",
    "matplotlib",
    "numpy",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llama_introspection"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
